NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@82566 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/atdt.html
+++ b/messageforums-help/src/sakai_forums/atdt.html
@@ -31,9 +31,12 @@ assigned a role having the necessary permissions.  To determine your
 role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
 permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
-<p>In Forums, you can set permissions to control access while you're
-creating a new forum or topic (see <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>), or when you're editing an existing forum or topic
-(see <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>).</p>
+<p>When you create a new forum or topic, the default permission settings
+assign each role in the site (e.g., student) to a predefined
+permission level (e.g., Contributor).  You can change the permissions
+from the default settings either while you're creating a new forum or
+topic (see <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>), or when you're
+editing an existing forum or topic (see <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>).</p>
 
 
 <p>Under "Permissions", you can modify permission levels for
