--- a/messageforums-help/src/sakai_messages/augw.html
+++ b/messageforums-help/src/sakai_messages/augw.html
@@ -80,17 +80,12 @@ status for your message.
 message.
 
 
-<p><strong>Note:</strong> Pasting text from Microsoft Word directly
-into the WYSIWYG editor may result in garbled output, even
-if the text appears correct in the editor.  Instead, to insert
-formatted text from a Word document, click the <strong><code>Paste from
-Word</code></strong> icon, place your cursor in the subsequent "Paste from Word"
-text box, and then press <code>Ctrl-v</code> in Windows, or
-<code>Cmd-v</code> on a Macintosh, to paste your copied
-text. Using <code>Ctrl-v</code> (or <code>Cmd-v</code>) to paste is
-the best method for preserving the formatting of the original Word
-document. Click <strong><code>OK</code></strong> to add the text to the item you are
-composing. </p>
+<p><strong>Note:</strong> Pasting text from Microsoft Word directly into
+the WYSIWYG editor may result in garbled output, even if
+the text appears correct in the editor.  Instead, to insert formatted
+text from a Word document, click the <strong><code>Paste from Word</code></strong> icon,
+and paste using <code>Ctrl-v</code> or <code>Command-v</code>.  For
+details, see <a href="content.hlp?docId=baep">Pasting from Microsoft Word</a>.</p>
 </li><li>Under "Attachments", you can attach a file from your local
 computer or from Resources, or specify the URL for a file on the
 web. For instructions, see <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
