NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@84650 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/asax.html
+++ b/messageforums-help/src/sakai_forums/asax.html
@@ -17,10 +17,9 @@
 <h3>What it does</h3>
 
 
-<p>The Forums tool allows instructors or site leaders to create an unlimited number of discussion forums for
-course or <a href="content.hlp?docId=ardt">project sites</a>, and is
-integrated closely with other tools such as Resources and
-Gradebook.</p>
+<p>The Forums tool allows instructors or site leaders to create an
+unlimited number of discussion forums, and is integrated closely with
+other tools such as Resources and Gradebook.</p>
 
 <h3>Key concepts</h3>
 
@@ -32,7 +31,7 @@ value and sent to the Gradebook with comments.</p>
 glance:</strong>  On your site's Home page (select
 <strong><code>Home</code></strong> on the site's <a href="content.hlp?docId=arcc">menubar</a>), you can see
 how many unread messages or posts you have in both Messages and Forums. 
- From My Workspace, you can see these totals for all sites you're a member of.</p>
+ From <a href="content.hlp?docId=aqzy">My Workspace</a>, you can see these totals for all sites you're a member of.</p>
 
 <p><strong>Ability to watch forums:</strong> Site members can elect to
 receive no notification, notification for all new postings in a site,
