--- a/messageforums-help/src/sakai_forums/asbg.html
+++ b/messageforums-help/src/sakai_forums/asbg.html
@@ -14,15 +14,12 @@
 <body>
 <div class="helpBody">
 <h2>Forums</h2>
-
-
 <h3>Overview</h3>
 
 
-<p>The Forums tool allows instructors or site leaders to create an unlimited number of discussion forums for
-course or <a href="content.hlp?docId=ardt">project sites</a>, and is
-integrated closely with other tools such as Resources and
-Gradebook. <a href="content.hlp?docId=asax">More...</a></p>
+<p>The Forums tool allows instructors or site leaders to create an
+unlimited number of discussion forums, and is integrated closely with
+other tools such as Resources and Gradebook. <a href="content.hlp?docId=asax">More...</a></p>
 
 
 <h3>How do I?</h3>
