NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@85070 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/auut.html
+++ b/messageforums-help/src/sakai_forums/auut.html
@@ -14,18 +14,20 @@
 <body>
 <div class="helpBody">
 <h2>Messages and Forums notifications</h2>
-<p>You can see the number of new messages or forum postings from either <a href="content.hlp?docId=aqzy">My Workspace</a> or your site's Home page.  You can also choose to get email
-notification of new messages or new postings on forum threads you have 
-contributed to.</p>
+<p>You can see the number of new messages or forum postings from either
+<a href="content.hlp?docId=aqzy">My Workspace</a> or your site's Home page.  You can also choose
+to get email notification of new messages or new postings on forum
+threads you have contributed to.</p>
 
 <h3>My Workspace</h3>
 
 <p>To see if someone has added a new message or forum posting to one of
-your sites, go to your Home page in My Workspace.  Under "Message Center Notifications", you'll
-see a list of your sites, and the number of new messages and forum
-postings for each. If there are no new messages or forum postings,
-you'll see "none" beside your site.  (Sites in which neither Messages
-nor Forums is turned on will not appear in the list.)</p>
+your sites, go to your Home page in My Workspace.  Under "Message
+Center Notifications", you'll see a list of your sites, and the number
+of new messages and forum postings for each. If there are no new
+messages or forum postings, you'll see "none" beside your site.
+(Sites in which neither Messages nor Forums is turned on will not
+appear in the list.)</p>
 
 <h3>The site Home page</h3>
 
@@ -36,8 +38,8 @@ on the site's Home page, where you can access the following functions:</p>
 Received</code> folder for that site.
 
 <br /><br />
-</li><li>Clicking <strong><code>New in Forums</code></strong> or the number of forum messages takes you
-to the forums for that site.
+</li><li>Clicking <strong><code>New in Forums</code></strong> takes you to the forums for that
+site.
 </li></ul>
 
 <p><strong>Note:</strong> "Message Center Notifications" will only
@@ -56,8 +58,10 @@ site.</p>
 </li><li>Click <strong><code>Settings</code></strong>.
 
 <br /><br />
-</li><li>Next to "Auto Forward Messages", click <strong><code>Yes</code></strong>. Type the desired email address in the text box provided, and then click <strong><code>Save Settings</code></strong>. This
-will forward a copy of each message to the email address you entered.
+</li><li>Next to "Auto Forward Messages", click <strong><code>Yes</code></strong>. Type the
+desired email address in the text box provided, and then click
+<strong><code>Save Settings</code></strong>. This will forward a copy of each message to
+the email address you entered.
 </li></ol>
 
 <p><strong>Note:</strong> You cannot reply to Messages from the forwarded
