--- a/messageforums-help/src/sakai_messages/atrg.html
+++ b/messageforums-help/src/sakai_messages/atrg.html
@@ -15,17 +15,6 @@
 <div class="helpBody">
 <h2>Searching Messages</h2>
 
-
-
-
-
-
-
-
-
-
-
-
 <p>To search for text in a message:</p>
 
 <ol><li>In your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Messages</code></strong>.
@@ -35,28 +24,22 @@
 
 <br /><br />
 </li><li>Next to "Search for text:", enter your search terms in the text
-box, and then click <strong><code>Search</code></strong>. The standard search will look
+box, and then click <strong><code>Search</code></strong>.  The standard search will look
 for your terms in the subject line of the messages in the selected folder.
 Searches are case sensitive.
 
 <br /><br />
 </li><li>To modify the search parameters, click <strong><code>Advanced Search</code></strong>
-and check the appropriate box(es).  Available parameters are:
+and check the appropriate box(es). Available parameters are:<br /><br />
 
-<br /><br />
-
-<ul><li><strong>Subject:</strong> The subject line of the message</li><li><strong>Authored By:</strong> Who sent the message</li><li><strong>Body:</strong> The body of the message</li><li><strong>Label:</strong> The label associated with the message</li><li><strong>Date Range:</strong> The date range in which the message
-was sent</li></ul>
-
-
+<ul><li>Subject</li><li>Authored By </li><li>Body</li><li>Label</li><li>Date Range</li></ul>
 
 <p>Search parameters in advanced searches will remain checked for
-subsequent searches until you clear them.  To clear a search, click
-<strong><code>Clear Search</code></strong>.
+subsequent searches until you clear them by clicking
+<strong><code>Clear Search</code></strong>.  
 </p>
 </li><li>To end an advanced search, click <strong><code>Normal Search</code></strong>.
 </li></ol>
-
 
 </div>
 </body></html>
