--- a/messageforums-help/src/sakai_messages/avao.html
+++ b/messageforums-help/src/sakai_messages/avao.html
@@ -17,9 +17,8 @@
 
 <h3>What it does</h3>
 
-<p>Messages is a communication tool that allows site participants to
-communicate using internal course mail. In addition, it supports
-messaging between groups.</p>
+<p>The Messages tool is an internal course mail system for 
+messaging between individuals and groups.</p>
 
 <h3>Key concepts</h3>
 
@@ -34,17 +33,12 @@ See Is What You Get) interface allows rich text, plain text, and
 HTML editing. You can also add attachments.</p>
 
 
-<p><strong>Note:</strong> Pasting text from Microsoft Word directly
-into the WYSIWYG editor may result in garbled output, even
-if the text appears correct in the editor.  Instead, to insert
-formatted text from a Word document, click the <strong><code>Paste from
-Word</code></strong> icon, place your cursor in the subsequent "Paste from Word"
-text box, and then press <code>Ctrl-v</code> in Windows, or
-<code>Cmd-v</code> on a Macintosh, to paste your copied
-text. Using <code>Ctrl-v</code> (or <code>Cmd-v</code>) to paste is
-the best method for preserving the formatting of the original Word
-document. Click <strong><code>OK</code></strong> to add the text to the item you are
-composing. </p>
+<p><strong>Note:</strong> Pasting text from Microsoft Word directly into
+the WYSIWYG editor may result in garbled output, even if
+the text appears correct in the editor.  Instead, to insert formatted
+text from a Word document, click the <strong><code>Paste from Word</code></strong> icon,
+and paste using <code>Ctrl-v</code> or <code>Command-v</code>.  For
+details, see <a href="content.hlp?docId=baep">Pasting from Microsoft Word</a>.</p>
 
 <p><strong>Message priority:</strong> You can set priority levels for
 messages to distinguish important messages from others.</p>
@@ -57,8 +51,9 @@ select number of individuals, or a select number of groups.
 <br /><br />
 </li><li>Messages you send using the <strong><code>To
 Recipients' Email Address(es)</code></strong> option are sent directly to
-participants' email addresses and are <strong>not</strong> stored in
-the Messages area.
+participants' email addresses; copies also appear in your <code>Sent</code>
+folder and the recipients' <strong><code>Received</code></strong> folders within Messages.  
+Recipients must reply using Messages, not their email programs.
 </li></ul>
 
 <h3>Help documentation</h3>
