--- a/messageforums-help/src/sakai_forums/auut.html
+++ b/messageforums-help/src/sakai_forums/auut.html
@@ -23,9 +23,9 @@ threads you have contributed to.</p>
 
 <p>To see if someone has added a new message or forum posting to one of
 your sites, go to your Home page in My Workspace.  Under "Message
-Center Notifications", you'll see a list of your sites, and the number
-of new messages and forum postings for each. If there are no new
-messages or forum postings, you'll see "none" beside your site.
+Center Notifications", you'll see a list of your sites, and
+the number of new messages and forum postings for each. If there are
+no new messages or forum postings, you'll see "none" beside your site.
 (Sites in which neither Messages nor Forums is turned on will not
 appear in the list.)</p>
 
@@ -42,9 +42,9 @@ Received</code> folder for that site.
 site.
 </li></ul>
 
-<p><strong>Note:</strong> "Message Center Notifications" will only
-appear on your site's Home page if these tools have been added to your
-site.</p>
+<p><strong>Note:</strong> "Message Center Notifications"
+will only appear on your site's Home page if these tools have been
+added to your site.</p>
 
 <h3>Email notifications</h3>
 
