NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@86862 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/augf.html
+++ b/messageforums-help/src/sakai_forums/augf.html
@@ -40,8 +40,8 @@ message, click the <strong><code>Other Actions</code></strong> menu, and select
 <br />
 <br />
 </li><li>Next to "Gradebook Items:", use the drop-down list to select the
-item for which you're posting the grade, and then enter the grade as a point value. (The drop-down list will
-automatically select a gradebook item if you selected one while
+item for which you're posting the grade, and then enter the grade as a point value. (The drop-down list
+will automatically select a gradebook item if you selected one while
 creating the topic.)
 
 <br /><br />
@@ -53,6 +53,8 @@ creating the topic.)
 </li></ol>
 
 <a name="demos"> </a>
+
+
 
 
 
