--- a/messageforums-help/src/sakai_messages/augv.html
+++ b/messageforums-help/src/sakai_messages/augv.html
@@ -24,9 +24,13 @@ default <code>Received</code>, <code>Sent</code>, and
 <p>The following basic functions are available in the Messages
 tool:</p>
 
-<ul><li>To compose a message, click <strong><code>Compose Message</code></strong>. See <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.<br /><br />
+<ul><li>To compose a message, click <strong><code>Compose Message</code></strong>. See <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.
+
+<br /><br />
 </li><li>To create a new personal folder, click <strong><code>New
-Folder</code></strong>.<br /><br />
+Folder</code></strong>.
+
+<br /><br />
 </li><li>To forward your messages to an email address of your choosing,
 click <strong><code>Settings</code></strong>. Next to "Auto Forward Messages", click
 <strong><code>Yes</code></strong>. Type the email address in the text box,
@@ -34,7 +38,6 @@ and then click <strong><code>Save Settings</code></strong>.
 
 <p><strong>Note:</strong> You cannot reply to Messages from the forwarded
 email messages; to reply, go to the Messages tool in your site.</p>
-
 
 
 </li><li>You'll see the total number of messages and unread messages for each folder
@@ -47,20 +50,33 @@ date.</p>
 
 <ul><li>To sort messages, click a column title 
 (<strong><code>Subject</code></strong>, <strong><code>Authored By</code></strong>, <strong><code>Date</code></strong>, or
-<strong><code>Label</code></strong>).<br /><br />
+<strong><code>Label</code></strong>).
+
+<br /><br />
 </li><li>To change the way messages are displayed, from the "View"
 drop-down list, select either <strong><code>All Messages</code></strong> or <strong><code>By
-Conversation</code></strong>.<br /><br />
+Conversation</code></strong>.
+
+<br /><br />
 </li><li>To view another folder, click <strong><code>Previous Folder</code></strong> or <strong><code>Next
-Folder</code></strong>.<br /><br />
-</li><li>To compose a new message, click <strong><code>Compose Message</code></strong>. See <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.<br /><br />
+Folder</code></strong>.
+
+<br /><br />
+</li><li>To compose a new message, click <strong><code>Compose Message</code></strong>. See <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.
+
+<br /><br />
 </li><li>To view the contents of a message, click its subject.
+
 <br /><br />
 </li><li>To mark messages as read or unread, check the messages you wish to
-mark, and then click <strong><code>Mark Read</code></strong> or <strong><code>Mark Unread</code></strong>.  <br /><br />
+mark, and then click <strong><code>Mark Read</code></strong> or <strong><code>Mark Unread</code></strong>.  
+
+<br /><br />
 </li><li>To move messages to another folder, check the messages you wish to
 move, and then click <strong><code>Move</code></strong>.  Select the destination folder,
-and then click <strong><code>Move Messages</code></strong>.  <br /><br />
+and then click <strong><code>Move Messages</code></strong>. 
+
+<br /><br />
 </li><li>To delete messages, check the messages you wish to delete, and
 then click <strong><code>Delete</code></strong>. This moves the messages to the
 <strong><code>Deleted</code></strong> folder, but does not purge (i.e., permanently delete)
@@ -72,16 +88,27 @@ click <strong><code>Delete Message(s)</code></strong> to confirm.
 <p>Inside a message, you will see the message contents and other details.</p>
 
 <ul><li>To view another message, click <strong><code>Previous Message</code></strong> or
-<strong><code>Next Message.</code></strong><br /><br />
-</li><li>To compose a reply, click <strong><code>Reply</code></strong>. See <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.<br /><br />
-</li><li>To forward a message, click <strong><code>Forward</code></strong>. See <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.<br /><br />
+<strong><code>Next Message.</code></strong>
+
+<br /><br />
+</li><li>To compose a reply, click <strong><code>Reply</code></strong>. See <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.
+
+<br /><br />
+</li><li>To forward a message, click <strong><code>Forward</code></strong>. See <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.
+
+<br /><br />
 </li><li>To move a message to another folder, click <strong><code>Move to
 folder</code></strong>. Use the radio buttons to select a destination folder, and
-then click <strong><code>Move Message</code></strong>.<br /><br />
+then click <strong><code>Move Message</code></strong>.
+
+<br /><br />
 </li><li>To delete a message, click <strong><code>Delete</code></strong>. To confirm the
-deletion, again click <strong><code>Delete</code></strong>.</li></ul>
+deletion, again click <strong><code>Delete</code></strong>.
+</li></ul>
 
  <a name="demos"> </a>
+
+
 
 
 
