--- a/messageforums-help/src/sakai_forums/atdk.html
+++ b/messageforums-help/src/sakai_forums/atdk.html
@@ -29,7 +29,6 @@
 
 
 
-
 <p><strong>Note:</strong> To complete these procedures, you must be
 assigned a role having the necessary permissions.  To determine your
 role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
@@ -41,7 +40,7 @@ permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overvie
 <h3>Revising a forum or topic</h3>
 
 <p>To revise a forum, a topic, or the default template for newly
-created forums and topics:</p>
+created forums:</p>
 
 <ol><li>In your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Forums</code></strong>, and then
 click one of the following:
@@ -49,7 +48,7 @@ click one of the following:
 <br /><br />
 
 <ul><li><strong>Template Settings:</strong> Settings from this default
-template will apply each time you create a new forum or topic. You can
+template will apply each time you create a new forum. You can
 override these settings for an individual forum or topic after you've
 created it.
 </li><li><strong>Forum Settings:</strong> This setting overrides the
@@ -59,15 +58,16 @@ template and forum settings for an individual topic.
 </li></ul><br />
 </li><li>For a forum or topic, you can change the title, descriptions, and
 attachments. You can also choose to disable postings. For a forum or
-topic or the default template, you can choose to modify
-permissions. For instructions, see <a href="content.hlp?docId=atdt">Controlling access to Forums</a>.
+topic or the default template, you can choose to modify permissions,
+enable moderation, or cause all messages in threads to be marked as
+read. For more about permissions, see <a href="content.hlp?docId=atdt">Controlling access to Forums</a>.
 
 <br /><br />
 </li><li>When you're finished, click one of the following:
 
 <br /><br />
 
-<ul><li><strong>Save Settings:</strong> Saves your changes and returns you to
+<ul><li><strong>Save:</strong> Saves your changes and returns you to
 the Forums screen
 </li><li><strong>Save Draft:</strong> Saves your forum as a draft and returns you
 to the Forums screen
@@ -85,14 +85,16 @@ Forums screen
 
 <p>To delete a forum or topic you've created:</p>
 
-<ol><li>On the Forums screen, find the forum or topic you wish to delete, and 
-next to its title, click <strong><code>Forum Settings</code></strong> or <strong><code>Topic Settings</code></strong>.
+<ol><li>On the Forums screen, next to the title of the forum or topic you
+wish to delete, click <strong><code>Forum Settings</code></strong> or <strong><code>Topic
+Settings</code></strong>.
 
 <br /><br />
 </li><li>At the bottom of the screen, click <strong><code>Delete</code></strong>.
 
 <br /><br />
-</li><li>You'll see a warning message that asks you to confirm the deletion. At the bottom of the page, click <strong><code>Delete</code></strong> or <strong><code>Cancel</code></strong>.
+</li><li>You'll be prompted to confirm the deletion. At the bottom of the
+page, click <strong><code>Delete</code></strong> or <strong><code>Cancel</code></strong>.
 </li></ol>
 
 </div>
