NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@89162 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/asbg.html
+++ b/messageforums-help/src/sakai_forums/asbg.html
@@ -42,7 +42,7 @@ other tools such as Resources and Gradebook. <a href="content.hlp?docId=asax">Mo
 </li><li><a href="content.hlp?docId=avar">Moderating messages in a forum</a>
 </li><li><a href="content.hlp?docId=azve">Emailing forum message authors</a>
 </li><li><a href="content.hlp?docId=azvh">Linking to a message in Forums</a>
-</li><li><a href="content.hlp?docId=arbr">Using the WYSIWYG editor</a>
+</li><li><a href="content.hlp?docId=arbr">The WYSIWYG editor</a>
 </li></ul>
 
 
