--- a/messageforums-help/src/sakai_messages/avaq.html
+++ b/messageforums-help/src/sakai_messages/avaq.html
@@ -27,7 +27,7 @@ messaging between individuals and groups. <a href="content.hlp?docId=avao">More.
 </li><li><a href="content.hlp?docId=augv">Viewing and managing messages</a>
 </li><li><a href="content.hlp?docId=atrg">Searching Messages</a>
 </li><li><a href="content.hlp?docId=auut">Messages and Forums notifications</a>
-</li><li><a href="content.hlp?docId=arbr">Using the WYSIWYG editor</a>
+</li><li><a href="content.hlp?docId=arbr">The WYSIWYG editor</a>
 </li></ul>
 
 
