NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@89205 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/asci.html
+++ b/messageforums-help/src/sakai_forums/asci.html
@@ -14,7 +14,6 @@
 <body>
 <div class="helpBody">
 <h2>Creating a new forum and topic in Forums</h2>
-
 <a name="top"> </a>
 
 
@@ -79,6 +78,16 @@ participants to post messages.
 <strong><code>Yes</code></strong> next to "Moderate Topics in Forum".  <strong><code>No</code></strong> is
 selected by default, allowing site participants to post messages
 without moderation.
+
+<br /><br />
+</li><li>To automatically mark all messages in a thread as read at one
+time, under "Mark Threads Read", select <strong><code>Yes</code></strong> next to
+"Automatically Mark All Messages in a Thread as Read".  With this
+setting, each time you open the first message in a thread, all
+messages within that thread are automatically marked as read. The
+default setting is <strong><code>No</code></strong>, which tracks read/unread status for
+each message individually. (With the default thread, you can also
+manually click <strong><code>Mark All as Read</code></strong> for a given thread.)
 </li><li>
 <p>Under "Permissions", you can modify permission levels for
 participant roles (and groups, if you've created them; see <a href="content.hlp?docId=atcs">Managing groups</a>). To do so, from the list under
@@ -127,10 +136,11 @@ Gradebook, see <a href="content.hlp?docId=aran">Adding, editing, or deleting a G
 
 <br /><br />
 
-<ul><li><strong>Save Draft:</strong> Save your forum as a draft. Forums saved as draft will not be
-available to site participants.
+<ul><li><strong>Save:</strong> Save your changes. 
 </li><li><strong>Save Settings &amp; Add Topic:</strong> Save your changes
 and add a topic to your forum. 
+</li><li><strong>Save Draft:</strong> Save your forum as a draft. Forums
+saved as draft will not be available to site participants.
 </li><li><strong>Cancel:</strong> Cancel your changes.
 </li></ul>
 </li></ol>
@@ -160,8 +170,7 @@ title, click <strong><code>New Topic</code></strong>.</p>
 
 <br /><br />
 </li><li>Next to "Short Description", you can provide a brief description
-(limited to 255 characters) that will display below the title in the
-Discussion Forums area.
+(limited to 255 characters) that will display below the title.
 
 <br /><br />
 </li><li>Next to "Description", you can enter an in-depth description of
@@ -183,6 +192,16 @@ participants to post messages.
 <strong><code>Yes</code></strong> next to "Moderate Topic".  <strong><code>No</code></strong> is selected by
 default, allowing site participants to post messages without
 moderation.
+
+<br /><br />
+</li><li>To automatically mark all messages in a thread as read at one
+time, under "Mark Threads Read", select <strong><code>Yes</code></strong> next to
+"Automatically Mark All Messages in a Thread as Read".  With this
+setting, each time you open the first message in a thread, all
+messages within that thread are automatically marked as read. The
+default setting is <strong><code>No</code></strong>, which tracks read/unread status for
+each message individually. (With the default thread, you can also
+manually click <strong><code>Mark All as Read</code></strong> for a given thread.)
 </li><li>
 <p>Under "Permissions", you can modify permission levels for
 participant roles (and groups, if you've created them; see <a href="content.hlp?docId=atcs">Managing groups</a>). To do so, from the list under
@@ -231,7 +250,7 @@ Gradebook, see <a href="content.hlp?docId=aran">Adding, editing, or deleting a G
 
 <br /><br />
 
-<ul><li><strong>Save Settings:</strong> Save your changes, post the topic,
+<ul><li><strong>Save:</strong> Save your changes, post the topic,
 and exit the Forum Settings screen. 
 You'll see your newly posted topic within your forum on the Forums screen.
 </li><li><strong>Save Draft:</strong> Save your topic as a draft.
