NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@95469 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/auut.html
+++ b/messageforums-help/src/sakai_forums/auut.html
@@ -42,9 +42,8 @@ Received</code> folder for that site.
 site.
 </li></ul>
 
-<p><strong>Note:</strong> "Message Center Notifications"
-will only appear on your site's Home page if these tools have been
-added to your site.</p>
+<p><strong>Note:</strong> "Message Center Notifications" will only appear
+on your site's Home page if these tools have been added to your site.</p>
 
 <h3>Email notifications</h3>
 
