NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.7.x@95470 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/azvh.html
+++ b/messageforums-help/src/sakai_forums/azvh.html
@@ -19,7 +19,7 @@ assigned a role having the necessary permissions.  To determine your
 role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
 permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
-<p>A URL you copy from your browser's address bar
+<p>A web address you copy from your browser's address bar
 when working in your site may not always take you back to the
 particular content you were viewing; in some cases, it will only take
 you back to that tool.  In Forums, you can generate a persistent link
