--- a/messageforums-help/src/sakai_forums/asbg.html
+++ b/messageforums-help/src/sakai_forums/asbg.html
@@ -21,7 +21,6 @@
 unlimited number of discussion forums, and is integrated closely with
 other tools such as Resources and Gradebook. <a href="content.hlp?docId=asax">More...</a></p>
 
-
 <h3>How do I?</h3>
 
 
@@ -32,17 +31,28 @@ other tools such as Resources and Gradebook. <a href="content.hlp?docId=asax">Mo
 
 
 
+<ul><li><strong>Setting up forums</strong>
+
 <ul><li><a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>
 </li><li><a href="content.hlp?docId=atdt">Controlling access to Forums</a>
-</li><li><a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>
-</li><li><a href="content.hlp?docId=auul">Deleting a forum message</a>
-</li><li><a href="content.hlp?docId=asbe">Viewing Forums</a>
-</li><li><a href="content.hlp?docId=asyy">Posting and responding to Forum messages</a>
+</li><li><a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a></li></ul>
+</li><li><strong>Participating in forum discussions</strong>
+
+<ul><li><a href="content.hlp?docId=asbe">Viewing Forums</a>
+</li><li><a href="content.hlp?docId=asyy">Posting and responding to Forum messages</a></li></ul>
+</li><li><strong>Managing forum messages</strong>
+
+<ul><li><a href="content.hlp?docId=auul">Deleting a forum message</a>
 </li><li><a href="content.hlp?docId=augf">Grading messages in Forums</a>
 </li><li><a href="content.hlp?docId=avar">Moderating messages in a forum</a>
 </li><li><a href="content.hlp?docId=azve">Emailing forum message authors</a>
-</li><li><a href="content.hlp?docId=azvh">Linking to a message in Forums</a>
+</li></ul>
+</li><li><strong>Miscellaneous</strong>
+
+<ul><li><a href="content.hlp?docId=azvh">Linking to a message in Forums</a>
 </li><li><a href="content.hlp?docId=arbr">The WYSIWYG editor</a>
+</li></ul>
+
 </li></ul>
 
 
