--- a/messageforums-help/src/sakai_forums/augf.html
+++ b/messageforums-help/src/sakai_forums/augf.html
@@ -16,6 +16,11 @@
 <h2>Grading messages in Forums</h2>
 
 
+<p><strong>Note:</strong> To complete these procedures, you must be
+assigned a role having the necessary permissions.  To determine your
+role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
+permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
+
 <p><strong>Note:</strong> Before following these directions you must
 create an item in the Gradebook; see <a href="content.hlp?docId=aran">Adding, editing, or deleting a Gradebook item</a>.</p>
 
