--- a/messageforums-help/src/sakai_forums/avar.html
+++ b/messageforums-help/src/sakai_forums/avar.html
@@ -14,7 +14,6 @@
 <body>
 <div class="helpBody">
 <h2>Moderating messages in a forum</h2>
-
 <p><strong>Note:</strong> The following instructions assume
 you've created a moderated forum; see <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a> or <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.</p>
 
@@ -27,13 +26,13 @@ you've created a moderated forum; see <a href="content.hlp?docId=atdk">Revising 
 parentheses is the number of messages awaiting your attention.
 
 <br /><br />
-</li><li>Check the box next to the message you would like to moderate, and choose
-<strong><code>Deny</code></strong> or <strong><code>Approve</code></strong>. You will be returned to the Pending
-Messages page to continue moderation.
+</li><li>Check the box next to the message you'd like to moderate, and choose
+<strong><code>Deny</code></strong> or <strong><code>Approve</code></strong>. You'll be returned to the <code>Pending
+Messages</code> page to continue moderation.
 
 <p><strong>Note:</strong> To include a comment when you're denying a
-message, click the subject of the message and deny the message. At
-this point, you will have the opportunity to add a comment.</p>
+message, click the subject of the message and deny the message. You'll
+then have the opportunity to add a comment.</p>
 </li></ol>
 
 </div>
