NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@95541 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/asax.html
+++ b/messageforums-help/src/sakai_forums/asax.html
@@ -23,25 +23,23 @@ other tools such as Resources and Gradebook.</p>
 
 <h3>Key concepts</h3>
 
-
 <p><strong>Grading option:</strong> Interactions can be assigned a point
 value and sent to the Gradebook with comments.</p>
 
-<p><strong>Counts of unread posts at a
-glance:</strong>  On your site's Home page (select
-<strong><code>Home</code></strong> on the site's <a href="content.hlp?docId=arcc">menubar</a>), you can see
-how many unread messages or posts you have in both Messages and Forums. 
- From <a href="content.hlp?docId=aqzy">My Workspace</a>, you can see these totals for all sites you're a member of.</p>
+<p><strong>Counts of unread posts at a glance:</strong> On your site's
+Home page (select <strong><code>Home</code></strong> on the site's <a href="content.hlp?docId=arcc">menubar</a>), you
+can see how many unread messages or posts you have in both Messages
+and Forums.  From <a href="content.hlp?docId=aqzy">My Workspace</a>, you can see these totals
+for all sites you're a member of.</p>
 
 <p><strong>Ability to watch forums:</strong> Site members can elect to
-receive no notification, notification for all new postings in a site,
-or notification for responses to threads they've posted in.</p>
+receive no email notification, notification for all new postings in a site,
+or notification for responses to threads they've posted in.  </p>
 
-<p><strong>Composing messages:</strong> A WYSIWYG 
-(What You See Is What You Get) interface
-allows rich text, plain text, and HTML editing. You can add
-attachments to any message by linking to files or web links in
-Resources.</p>
+<p><strong>Composing messages:</strong> A WYSIWYG (What You
+See Is What You Get) interface allows rich text, plain text, and
+HTML editing. You can add attachments to any message by
+linking to files or web links in Resources.</p>
 
 
 <p><strong>Note:</strong> Pasting text from Microsoft Word directly into
@@ -66,8 +64,6 @@ site owners to determine the participation level of individual
 participants.  You can also read all of a particular participant's
 posts using this feature.</p>
 
-
-
 <p><strong>Settings:</strong> The site owner (or another participant
 with the appropriate role) can enable participants to submit their
 posts to a topic before they have permission to read the responses of
@@ -78,7 +74,7 @@ topic settings in combination with predefined groups to allow or deny
 access to specific discussions per group.</p>
 
 <p><strong>Direct link to individual messages:</strong> Site leaders
-can copy a direct link to individual messages to use.</p>
+can copy a direct link to individual messages to use elsewhere.</p>
 
 <p><strong>Email the author of a message:</strong> Site leaders can
 directly email the author of a posting from within the forum tool.</p>
