NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.7.x@95624 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/asbg.html
+++ b/messageforums-help/src/sakai_forums/asbg.html
@@ -39,7 +39,7 @@ other tools such as Resources and Gradebook. <a href="content.hlp?docId=asax">Mo
 </li><li><strong>Participating in forum discussions</strong>
 
 <ul><li><a href="content.hlp?docId=asbe">Viewing Forums</a>
-</li><li><a href="content.hlp?docId=asyy">Posting and responding to Forum messages</a></li></ul>
+</li><li><a href="content.hlp?docId=asyy">Posting and responding to forum messages</a></li></ul>
 </li><li><strong>Managing forum messages</strong>
 
 <ul><li><a href="content.hlp?docId=auul">Deleting a forum message</a>
