--- a/messageforums-help/src/sakai_forums/asyy.html
+++ b/messageforums-help/src/sakai_forums/asyy.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html><head>
-<title>Posting and responding to Forum
+<title>Posting and responding to forum
 messages</title>
 <style type="text/css">
 		/* Style for specific inline images */
@@ -14,24 +14,12 @@ messages</title>
 </head>
 <body>
 <div class="helpBody">
-<h2>Posting and responding to Forum
+<h2>Posting and responding to forum
 messages</h2>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <a name="top"> </a>
+
+
 
 <p>In the Forums tool, you can post messages about topics, and post
 responses to the messages of other participants.</p>
@@ -44,7 +32,6 @@ responses to the messages of other participants.</p>
 
 <hr />
 
-
 <a name="2"> </a>
 
 <h3>Posting a new message</h3>
@@ -55,29 +42,36 @@ responses to the messages of other participants.</p>
 like to post a message.
 
 <br /><br />
-</li><li>Click <strong><code>Post New Thread</code></strong>. The Compose Forum Message screen
-will open.
+</li><li>Click <strong><code>Post New Thread</code></strong>. The <code>Compose Forum
+Message</code> screen will open.
 
 <br /><br />
 </li><li>Next to "Title", type the subject of your message.
 
 <br /><br />
-</li><li>Under "Message", use the WYSIWYG editor to compose your
+</li><li>Under "Message", use the <a href="content.hlp?docId=arbr">WYSIWYG editor</a> to compose your
 message.
 
-<br /><br />
+
+<p><strong>Note:</strong> Pasting text from Microsoft Word directly into
+the WYSIWYG editor may result in garbled output, even if the text
+appears correct in the editor.  Instead, to insert formatted text from
+a Word document, click the <strong><code>Paste from Word</code></strong> icon, and paste
+using <code>Ctrl-v</code> or <code>Command-v</code>.  For details, see
+<a href="content.hlp?docId=baep">Pasting from Microsoft Word</a>.</p>
+
+<p>Some users have reported problems using <strong><code>Paste from Word</code></strong> in
+Internet Explorer 9; for best results, use a supported
+browser.  See
+<a href="content.hlp?docId=asxg">Which browser should I use?</a></p>
+
+
 </li><li>Under "Attachments", you can attach a file from your local
-computer or from Resources, or specify the URL for a file on the
-web; see <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
+computer or from Resources, or specify the URL for a file
+on the web; see <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
 
 <br /><br />
-</li><li>When you're finished:
-
-<br /><br />
-
-<ul><li>To post your message, click <strong><code>Post Message</code></strong>.
-</li><li>To cancel your message without saving it, click <strong><code>Cancel</code></strong>.
-</li></ul>
+</li><li>When you're finished, to post your message, click <strong><code>Post Message</code></strong>.
 </li></ol>
 
 <p><strong>Note:</strong> If the forum or topic is moderated, your
@@ -99,17 +93,17 @@ able to post a response to another participant's message.</p>
 the subject of the desired message.
 
 <br /><br />
-</li><li>Click <strong><code>Reply</code></strong> (to reply to the message) or <strong><code>Reply to
-Thread</code></strong> (to reply to the first message in the thread).
+</li><li>Click <strong><code>Reply</code></strong> (to reply to the message) or <strong><code>Reply to Thread</code></strong>
+(to reply to the first message in the thread).
 
 <br /><br />
 </li><li>Next to "Reply Title", give your reply a title.
 
 <br /><br />
-</li><li>Under "Message", use the WYSIWYG editor to compose your
-reply. To insert a quote of the original message, click <strong><code>Insert
-Original Text</code></strong> or <strong><code>Insert Original Message Text</code></strong> (located
-above the WYSIWYG editor).
+</li><li>Under "Message", use the WYSIWYG editor to compose your reply. To
+insert a quote of the original message, click <strong><code>Insert Original
+Text</code></strong> or <strong><code>Insert Original Message Text</code></strong> (located above the
+WYSIWYG editor).
 
 <br /><br />
 </li><li>Under "Attachments", you can attach a file from your local
@@ -117,19 +111,18 @@ computer or from Resources, or specify the URL for a file on the
 web; see <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
 
 <br /><br />
-</li><li>When you're finished:
-
-<br /><br />
-
-<ul><li>To post your message, click <strong><code>Post Message</code></strong>.
-</li><li>To cancel your message without saving it, click <strong><code>Cancel</code></strong>.
-</li></ul>
+</li><li>When you're finished, to post your message, click <strong><code>Post Message</code></strong>.
 </li></ol>
 
 <p><strong>Note:</strong> If the forum or topic is moderated, your
 message will appear as "PENDING" until approved by a moderator.</p>
 
 <p><a href="#top">Back to top</a></p>
+
+ <a name="demos"> </a> 
+
+
+
 
 
 
